WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165415
ScriptExecutable should not contain a copy of firstLine and startColumn
https://bugs.webkit.org/show_bug.cgi?id=165415
Summary
ScriptExecutable should not contain a copy of firstLine and startColumn
Geoffrey Garen
Reported
2016-12-05 14:32:38 PST
ScriptExecutable should not contain a copy of firstLine and startColumn
Attachments
Patch
(12.49 KB, patch)
2016-12-05 14:36 PST
,
Geoffrey Garen
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-12-05 14:36:32 PST
Created
attachment 296190
[details]
Patch
Keith Miller
Comment 2
2016-12-05 14:42:22 PST
Comment on
attachment 296190
[details]
Patch r=me.
Geoffrey Garen
Comment 3
2016-12-05 14:46:31 PST
Committed
r209353
: <
http://trac.webkit.org/changeset/209353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug